fixed background image getting cut off at max absolute height

--- a/Workshop2SpringMVC/src/main/resources/static/css/main.css
+++ b/Workshop2SpringMVC/src/main/resources/static/css/main.css
@@ -2,24 +2,27 @@ html, body {
     height: 100%;
 }
 
+div, body {
+    margin: 0;
+    padding: 0;
+}
+
 div.content-container {
     padding-top: 60px;
+    padding-bottom: 120px;
+}
+
+body {
+    background: url('../images/wijnisfijn.png') no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    height: 100%;
 }
 
 .container-fluid {
     width: 80%;
-}
-
-.bg-img {
-    background: url('../images/wijnisfijn.png');
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-    height: 100%;
 }
 
 .footer {
